<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/myappstyle"
    android:background="@drawable/gradient3"
    tools:context="Gesture.Torch">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="250dp"
        android:layout_width="match_parent"
        android:fitsSystemWindows="true"
        android:id="@+id/feature_appbar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:titleEnabled="true"
            app:title="Auto SMS Wisher"
            android:id="@+id/c_t_torch">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top|center_horizontal"
                android:src="@drawable/tool_bck"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="bottom|end"
                android:src="@drawable/sms_icn"
                android:scaleType="centerCrop"
                android:layout_margin="16dp"
                app:layout_collapseMode="parallax"
                android:contentDescription="icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Often forget special occasions?.\nDon't worry! We will wish your\nloved ones through SMS\nright on time!"
                android:textSize="18sp"
                android:layout_margin="16dp"
                android:padding="10dp"
                android:gravity="start"
                android:layout_gravity="top" />

            <androidx.appcompat.widget.Toolbar
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin">

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


    <LinearLayout android:id="@+id/greetingWisherLayout"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#b54284">

            <TextView
                android:id="@+id/tvSwitchSMSWisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ON"
                android:textSize="18sp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="40dp"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_alignParentLeft="true"
                android:layout_alignStart="@id/SMSWisher_switch"
                android:textStyle="bold"
                android:layout_alignLeft="@id/SMSWisher_switch"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="12dp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/SMSWisher_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:theme="@style/SwitchCompatTheme2"
                android:layout_margin="12dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/smsanimation"
                android:layout_width="200dp"
                android:layout_height="150dp"
                app:lottie_rawRes="@raw/sms_lottie"
                app:lottie_loop="true"
                android:layout_centerHorizontal="true"
                app:lottie_autoPlay="true"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/textview_errormsg"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/error_border"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginLeft="12dp">

            <RelativeLayout
                android:id="@+id/rl1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/textview_errormsg"
                tools:ignore="MissingConstraints">

                <com.santalu.maskedittext.MaskEditText
                    android:id="@+id/editText_mobileNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:hint="@string/enter_10_digit_mobile_no"
                    android:inputType="phone"
                    android:layout_margin="12dp"
                    android:textColor="@color/black"
                    android:background="@android:color/transparent"
                    android:layout_alignBottom="@id/open_phoneBook"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:met_mask="+91 ##########" />

                <ImageButton
                    android:id="@+id/open_phoneBook"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:scaleType="fitCenter"
                    android:layout_centerVertical="true"
                    android:layout_margin="12dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="TODO"
                    android:text="Button"
                    android:background="@android:color/transparent"
                    android:src="@drawable/contactlistfinal"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="18dp"
            android:layout_margin="12dp">

            <EditText
                android:id="@+id/editText_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:inputType="date"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:layout_margin="12dp"
                android:focusableInTouchMode="false"
                android:background="@android:color/transparent"
                android:hint="@string/select_date_to_send_message" />
        </com.google.android.material.card.MaterialCardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFC3D8"
            android:layout_margin="12dp"
            app:cardCornerRadius="8dp">

            <Spinner
                android:id="@+id/spinner_occasion"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:layout_marginTop="16dp"
                android:layout_margin="12dp"
                android:theme="@style/spinnerTheme"
                android:prompt="@string/prompt_occasion" />

        </androidx.cardview.widget.CardView>


        <EditText
            android:id="@+id/editText_message"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_margin="12dp"
            android:layout_gravity="center"
            android:background="@drawable/border"
            android:hint="@string/pllease_type_your_message"
            android:maxLines="7"
            android:minLines="1"
            android:visibility="gone"
            android:padding="6dp"
            android:textColor="@color/primarydark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_occasion"
            tools:ignore="MissingConstraints,NotSibling" />

        <Button
            android:id="@+id/smsWisher_SaveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
            android:textColor="@color/white"
            android:layout_margin="12dp"
            android:layout_gravity="center" />
        <Button
            android:id="@+id/smsWisher_ShowSavedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Show saved Records"
            android:layout_margin="12dp"
            android:textColor="@color/white"
            android:layout_gravity="center" />

        <ImageView
            android:id="@+id/helpSMS"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="14dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom|end"
            android:src="@drawable/ic_information__1_"
            android:layout_marginRight="14dp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/featureinfo_SMS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="18dp"
            app:strokeWidth="1dp"
            android:backgroundTint="#b54284"
            app:strokeColor="#b54284"
            android:layout_marginLeft="16dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/lightbulbnew"
                    android:layout_marginLeft="16dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_centerInParent="true"
                    android:text="Feature information" />

            </RelativeLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#820357"
                    android:padding="10dp"
                    android:textSize="14sp"
                    android:backgroundTint="@android:color/transparent"
                    android:gravity="center"
                    android:text="Automatically schedules sms messages to wish your loved ones on special occasions" />

            </com.google.android.material.card.MaterialCardView>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>